src/objects/Support_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Session_ID__c</fullName>
        <label>Call Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Other__c</fullName>
        <description>Cancellation Reason text reply</description>
        <inlineHelpText>Cancellation Reason text reply</inlineHelpText>
        <label>Cancel Reason - Other</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <description>Cancellation Survey: Why did you discontinue your service with Bigcommerce?</description>
        <inlineHelpText>Cancellation Survey: Why did you discontinue your service with Bigcommerce?</inlineHelpText>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Feedback__c</fullName>
        <description>Cancel: Product or service that could have retained?</description>
        <inlineHelpText>Cancel: Product or service that could have retained?</inlineHelpText>
        <label>Cancellation Feedback</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Platform__c</fullName>
        <description>Cancellation survey: What platform will you be using?</description>
        <inlineHelpText>Cancellation survey: What platform will you be using?</inlineHelpText>
        <label>Cancellation Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Squarespace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woocommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemonstand</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CaseSurveys</relationshipLabel>
        <relationshipName>CaseSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Name_Text__c</fullName>
        <label>Category Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Name_transfer_successful__c</fullName>
        <label>Category name transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Structure_Text__c</fullName>
        <label>Category Structure Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Structure_transfer_successful__c</fullName>
        <label>Category structure transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <externalId>true</externalId>
        <label>Chat Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Text__c</fullName>
        <label>Content text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_transfer_successful__c</fullName>
        <label>Content pages transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Info_Text__c</fullName>
        <label>Customer Info Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Info_transfer_successful__c</fullName>
        <label>Customer info transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_transfer_successful__c</fullName>
        <label>Visual elements transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IF (Recommend__c &lt; 7, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Five9_ANI__c</fullName>
        <label>Five9 ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <label>Issue Resolved ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledgeable__c</fullName>
        <label>Knowledgeable</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>CaseSurveys</relationshipLabel>
        <relationshipName>CaseSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Missing_Features__c</fullName>
        <description>Used for Cancellation Survey</description>
        <inlineHelpText>Cancellation:  What features do you feel are missing?</inlineHelpText>
        <label>Missing Features</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Responses__c</fullName>
        <label>Number of Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Surveys</relationshipLabel>
        <relationshipName>Support_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Other__c</fullName>
        <description>Cancellation - What platform are you going to</description>
        <inlineHelpText>Cancellation - What platform are you going to</inlineHelpText>
        <label>Cancellation Platform - Other</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Details_Text__c</fullName>
        <label>Product Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Images_Text__c</fullName>
        <label>Product Images Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Options_Text__c</fullName>
        <label>Product Options Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Options_transfer_successful__c</fullName>
        <label>Product Options transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_details_transfer_successful__c</fullName>
        <label>Product details transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_image_transfer_successful__c</fullName>
        <label>Product image transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <formula>If ( Recommend__c &gt; 8, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommend__c</fullName>
        <label>Recommend ?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redirect_301_Text__c</fullName>
        <label>301 text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_301_transfer_successful__c</fullName>
        <label>301 redirect transfer successful?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Detractor__c</fullName>
        <formula>If( Satisfaction__c  &lt; 7, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfaction Detractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Promoter__c</fullName>
        <formula>If ( Satisfaction__c &gt; 8, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfaction Promoter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>Satisfaction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <label>Survey Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Id__c</fullName>
        <label>Survey Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <picklist>
            <picklistValues>
                <fullName>Support Basic CSAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Post-Chat Popup Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support NPS Next - Chat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Support NPS Phone Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration CSAT Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Verification Checklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Satisfaction__c</fullName>
        <formula>IF( 
Satisfaction__c &gt;= 4,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Satisfaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visual_Text__c</fullName>
        <label>Visual text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Completion_Date__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Number_of_Responses__c</columns>
        <columns>Case__c</columns>
        <columns>Feedback__c</columns>
        <columns>Issue_Resolved__c</columns>
        <columns>Knowledgeable__c</columns>
        <columns>Satisfaction__c</columns>
        <columns>Survey_Sent_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Migration_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Number_of_Responses__c</columns>
        <columns>Case__c</columns>
        <columns>Survey_Completion_Date__c</columns>
        <columns>Survey_Sent_Date__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Feedback__c</columns>
        <columns>Issue_Resolved__c</columns>
        <columns>Knowledgeable__c</columns>
        <columns>Satisfaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Name__c</field>
            <operation>notContain</operation>
            <value>support,cancellation</value>
        </filters>
        <label>All Migration Surveys</label>
    </listViews>
    <listViews>
        <fullName>Migration_CSAT_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Satisfaction__c</columns>
        <columns>Feedback__c</columns>
        <columns>Survey_Completion_Date__c</columns>
        <columns>Survey_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Name__c</field>
            <operation>contains</operation>
            <value>migration csat</value>
        </filters>
        <label>Migration CSAT Surveys</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>SOW</fullName>
        <columns>NAME</columns>
        <columns>Survey_Completion_Date__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Number_of_Responses__c</columns>
        <columns>Case__c</columns>
        <columns>Feedback__c</columns>
        <columns>Issue_Resolved__c</columns>
        <columns>Knowledgeable__c</columns>
        <columns>Satisfaction__c</columns>
        <columns>Survey_Sent_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Name__c</field>
            <operation>contains</operation>
            <value>migration</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>SOW</label>
    </listViews>
    <listViews>
        <fullName>Support_NPS_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Survey_Completion_Date__c</columns>
        <columns>Satisfaction__c</columns>
        <columns>Number_of_Responses__c</columns>
        <columns>Issue_Resolved__c</columns>
        <columns>Recommend__c</columns>
        <columns>Satisfaction_Detractor__c</columns>
        <columns>Satisfaction_Promoter__c</columns>
        <columns>Feedback__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Name__c</field>
            <operation>notContain</operation>
            <value>migration</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Support NPS Surveys</label>
    </listViews>
    <listViews>
        <fullName>phone_surveys</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Agent_Name__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Resolved__c</columns>
        <columns>Recommend__c</columns>
        <columns>Satisfaction__c</columns>
        <columns>Survey_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Name__c</field>
            <operation>contains</operation>
            <value>Phone</value>
        </filters>
        <label>phone surveys</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Support Survey Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>